# snakegame

./: CMakeLists.txt
src/: game.cpp  game.h  graphics.cpp  graphics.h  main.cpp  snake.cpp  snake.h
